--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ MarkupSafe>=2.1.0
 itsdangerous>=2.1.0
 click>=8.1.0
 blinker>=1.6.0
-Flask-OAuthlib>=0.9.6
 requests-oauthlib>=1.3.1
 PyJWT>=2.8.0
+openpyxl>=3.1.0
+reportlab>=4.0.0
 cryptography>=41.0.0
+firebase-admin>=6.2.0
